Fixed spacing around English open quote slightly off (fixes #8)

--- a/Serifu.Web/Assets/results.css
+++ b/Serifu.Web/Assets/results.css
@@ -61,10 +61,10 @@
   }
 
   .translation-quote {
-    --quote-mark-spacing: 0.18ch;
+    --quote-mark-spacing: 0.12em;
 
     position: relative;
-    padding-left: calc(1ch + var(--quote-mark-spacing));
+    padding-left: calc(0.5em + var(--quote-mark-spacing));
 
     blockquote {
       margin: 0;
